@@ -10,7 +10,7 @@
   \indexspace
 
 \centerline{\bfseries ◆◆◆ サ ◆◆◆}\par\nobreak
-  \item 里見弴\leaders\hbox{$\cdot$}\hfill 1
+  \item 里見弴\leaders\hbox{$\cdot$}\hfill \see{あ}{1}
 
   \indexspace
 
